latest style updates

--- a/src/assets/sass/_navbar.scss
+++ b/src/assets/sass/_navbar.scss
@@ -40,6 +40,7 @@
       position: absolute;
       left: 0;
       right: 0;
+      top: calc(100% - 2px);
       padding: $grid-gutter-width;
       background: $body-bg;
       border-bottom: solid 1px theme-color('secondary');
